# medic

./: .env.example  LICENSE  README.md  examples.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_happy_flow.py
